Updated UI, added new Page View

--- a/WebApp1/Views/Home/Contact.cshtml
+++ b/WebApp1/Views/Home/Contact.cshtml
@@ -15,3 +15,11 @@
     <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+<hr />
+<h3>Azure Service Bus Research</h3>
+Post below to Message Queue 
+<asp:TextBox id="txtMsg" Rows="5" Columns="50" runat="server" />
+<asp:Button OnClick="SubmitStateFull_Click" Text="Submit Statefull Messsage" runat="server" />
+<asp:Button OnClick="SubmitStateLess_Click" Text="Submit Stateless Message" runat="server" />
+<asp:Label ID="lblMessages" runat="server" Text="Messages" />
